axios installed, and API file deleted and utilized on the Homepage component. overlapping css class fixed

--- a/code/src/components/Card/Card.css
+++ b/code/src/components/Card/Card.css
@@ -29,6 +29,7 @@
     font-size: 12px;
     color: #282828;
     margin-bottom: 4px;
+    font-weight: 600;
 }
 
 .category {
