--- a/code/src/components/Header/Header.css
+++ b/code/src/components/Header/Header.css
@@ -6,7 +6,7 @@
   /* border: 1px solid cornflowerblue; */
 }
 
-.title {
+.main-title {
   text-decoration: none;
   color: #3A4895;
   font-size: 1.5rem;
@@ -22,7 +22,7 @@
 }
 
 .cart-size {
-  height: 1rem;
+  height: 16px;
   position: absolute;
   top: -2px;
   left: 8px;
